# cassie-gazebo-sim

./: README.md
cassie/: cassie.sdf  launch_sim.sh
cassie_fixed_base/: cassie.sdf  cassie.world  launch_sim.sh  model.config
plugin/: CMakeLists.txt
plugin/example/: cassiectrl.c
plugin/include/: CassieInitialization.h  CassiePlugin.hpp  udp_lcm_translator.h
plugin/src/: CassieInitialization.cpp  CassiePlugin.cpp  udp_lcm_translator.cc
